fix: address PR review on annotated document copies
Codex review, both P1:

1. The viewer's Content-Security-Policy blocked its own inline scripts.
   `script-src 'self'` dropped the server-resolved configuration block and
   the CSRF bootstrap in csrf-token.jspf, so window.CARLOS_ANNOTATE was
   undefined, no page rendered, and every save would have posted an empty
   CSRF token. Verified against a live deployment before and after.

   Fixed with a per-response nonce rather than 'unsafe-inline', which would
   also admit injected script. The page publishes the nonce as the cspNonce
   request attribute; csrf-token.jspf and LogoutBroadcastFilter emit a
   matching nonce attribute when it is present and are unchanged for every
   page that publishes nothing. LogoutBroadcastFilter is included because it
   injects a third inline block into every authenticated HTML page, and
   without the nonce idle logout and cross-tab logout stopped working on
   this page alone.

   This failure is invisible in the DOM and reported only on the browser
   console, which is why the Playwright check passed while the page was
   broken. It now asserts the header is present, carries a nonce, that both
   inline blocks executed, and that the console logged no CSP violation.

2. Two annotation saves completing in the same millisecond picked the same
   destination filename, and because a plain write truncates, both document
   rows could point at whichever request finished last — silently replacing
   one patient's document with another's. createUniqueTarget now writes with
   CREATE_NEW so a collision fails instead of overwriting, adds a UUID to the
   name, and retries.

SonarCloud new-code gate:

- S5443 (public temp dir, two sites): the composition working copy is now
  created under the application temp root with rw------- permissions, and
  verify() re-parses the composed bytes from memory instead of staging them
  through a shared temp file.
- S2095 (blocker): the composition execu